Make WebWidget::resize early out if the size doesn't change.

This was already done in most of WebWidget's descendants except for
render_widget_fullscreen_pepper and WebWidgetPopupImpl. It makes more sense to
check this inside the call rather than relying on the caller
(RenderWidget::Resize in this case) and this simplifies some changes I'm making
here in another CL: https://codereview.chromium.org/1844013002/

WebWidgetPopupImpl turned out to be caching the window rect itself. I removed
this cached variable and let it just query the RenderWidget's rect instead. In
doing this, I believe RenderWidget has a bug in how it handles setWindowRect.
It caches the given rect and uses that when queried until a Move ACK comes back
from the browser host at which point it starts returning the view_screen_rect_
again, but it never sets the view_screen_rect_. I now set the view_screen_rect_
to the pending_window_rect_ once we get the last Move ACK.

BUG=600507

Review URL: https://codereview.chromium.org/1894333002

Cr-Commit-Position: refs/heads/master@{#389984}

Former-commit-id: 71cb5b185f274ee0f96b346ce8a515073e9e2975